// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders properly 1`] = `
<div>
  <div
    class="jsx-477676945 buttonWrapper"
  >
    <div
      class="jsx-477676945 buttonBackground alignCenter"
    >
      <a
        class="jsx-477676945 buttonComponent fontS"
        href="https://www.google.com"
        rel="noreferrer"
        target="_blank"
      >
        Texto dentro do botão
      </a>
    </div>
  </div>
</div>
`;

exports[`<Button /> renders properly as a submit button 1`] = `
<div>
  <div
    class="jsx-477676945 buttonWrapper"
  >
    <div
      class="jsx-477676945 buttonBackground alignCenter"
    >
      <button
        class="jsx-477676945 buttonComponent fontS"
        type="submit"
      >
        Texto dentro do botão
      </button>
    </div>
  </div>
</div>
`;

exports[`<Button /> renders properly when disabled, uppercased and aligned left 1`] = `
<div>
  <div
    class="jsx-477676945 buttonWrapper"
  >
    <div
      class="jsx-477676945 buttonBackground disabled"
    >
      <a
        class="jsx-477676945 buttonComponent fontS buttonComponentLowercase"
        href="https://www.google.com"
        rel="noreferrer"
        target="_blank"
      >
        Texto dentro do botão
      </a>
    </div>
  </div>
</div>
`;

exports[`<Button /> renders properly without an external link 1`] = `
<div>
  <div
    class="jsx-477676945 buttonWrapper"
  >
    <div
      class="jsx-477676945 buttonBackground alignCenter"
    >
      <a
        class="buttonComponent fontS"
        href="/pt/projects"
      >
        Texto dentro do botão
      </a>
    </div>
  </div>
</div>
`;
